# barcode-companion-publish

./: .gitignore  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/barcode_scanner/: MainActivity.kt
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/zaang/barcode_companion/: BarcodeCompanionPlugin.kt
ios/: Runner.pch  barcode_companion.podspec
ios/Classes/: barcodeDecoder.cpp  barcodeDecoder.def  barcodeDecoder.hpp  barcodeScanning.cpp  barcodeScanning.def  barcodeScanning.hpp
ios/Flutter/: .last_build_id
ios/Runner/: Info.plist  Runner-Bridging-Header.h
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
ios/Runner/Base.lproj/: Main.storyboard
lib/: barcodeDecoder.dart  main.dart
lib/Backend/: database.dart  history_manager.dart  scan.dart
lib/UI/: splash_screen.dart
lib/UI/Camera/: CameraApp.dart  display_form.dart  focus_rectangle.dart
lib/UI/History/: history.dart  history_item_window.dart
lib/UI/Home/: home_page.dart
lib/UI/Provider/: PictureProvider.dart  ScrollValue.dart
source-decode-withDocs/: CODETOBARSCONVERSION.docx  CODETOBARSCONVERSION.html  CODETOBARSCONVERSION.md  S18C_alternate_detector.cpp  S18C_detector.cpp  S18C_parser.cpp  barodeCompanionDecoding.docx  ~$rodeCompanionDecoding.docx
test/: widget_test.dart
